@@ -1,0 +1,11 @@
+<jwc id="shell">
+<jwc id="body">
+
+<jwc id="wrapped"/>
+
+<hr>
+
+<jwc id="showInspector"/>
+
+</jwc>
+</jwc>
