@@ -1,0 +1,14 @@
+<jwc id="border">
+
+This tutorial demonstration how to dynamically change the locale
+for the running application.
+
+<p>
+Select a new locale:
+
+<jwc id="form">
+<jwc id="inputLocale"/>
+<input type=submit value="Change!">
+</jwc>
+
+</jwc>
