@@ -1,0 +1,14 @@
+<jwc id="border">
+
+Diese Referentendemonstration, wie man dynamisch
+das locale f&#252;r die laufende Anwendung &#228;ndert.
+
+<p>
+W&#228;hlen Sie ein neues locale aus:
+
+<jwc id="form">
+<jwc id="inputLocale"/>
+<input type=submit value="&#196;nderung!">
+</jwc>
+
+</jwc>
