@@ -1,0 +1,15 @@
+<jwc id="border">
+
+Questa dimostrazione d'istruzione come cambiare dinamicamente 
+il locale per l' applicazione corrente.
+
+
+<p>
+Selezionare un nuovo locale:
+
+<jwc id="form">
+<jwc id="inputLocale"/>
+<input type=submit value="Cambiamento!">
+</jwc>
+
+</jwc>
